# BlockchainElectionsHackathon

./: .pre-commit-config.yaml  README.md  package.json  pyproject.toml  requirements.txt
backend/: backend.py  main.py  visualization.py
backend/sms/: sendSMS.py
contract/: truffle-config.js
contract/contracts/: Election.sol  Election_2.sol
contract/contracts/artifacts/: Election.json  Election_metadata.json
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/components/: registerForm.js
frontend/pages/: approve.js  index.js  results.js  vote.js
frontend/pages/api/: approveRegister.js  getCandidates.js  getElectionResults.js  getRegisterRequests.js  register.js  vote.js
frontend/public/: visualization.py
frontend/styles/: Home.module.css
