[tool.poetry]
name = "blockchainelectionshackathon"
version = "0.1.0"
description = "block chain election"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
0x-web3 = "^4.8.2"
requests = "^2.27.1"
WTForms = "^3.0.1"
Flask-Cors = "^3.0.10"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
